Pagina web principal

--- a/index.html
+++ b/index.html
@@ -1,1 +1,165 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Responsive Desing Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Playfair+Display+SC" rel="stylesheet">
+</head>
+<body>
+    <nav>
+        <div class="barra-navegador">
+            <ul class="lista-botones">
+                <li class="nav-boton boton1"><a class="nav-boton-ancla" id="#boton1">Boton1</a></li>
+                <li class="nav-boton boton2"><a class="nav-boton-ancla" id="#boton2">boton2</a></li>
+                <li class="nav-boton boton3"><a class="nav-boton-ancla" id="#boton3">boton3</a></li>
+                <li class="nav-boton boton4"><a class="nav-boton-ancla" id="#boton4">boton4</a></li>
+            </ul>
+        </div>
+        <div class="boton-opciones">
+        </div>
+        <!--<div class="menu-boton-opciones">
+            
+        </div>-->
+    </nav>
+    <header>
+        <div class="fondo-principal-cabecera">
+            <div class="capa-filtro">
+                <article>
+                    <h2>Web-Development</h2>
+                    <p>Junior Front-End</p>
+                </article>
+            </div>
+        </div>
+    </header>
+    <section class="primer-fondo">
+        <div class="fondo-primero-habilidades">
+            <div class="contenedor-titulo">
+                <h2>Skills &amp; learning</h2>
+                <hr>
+                <p>Fast learning and adaptation to new enviroments</p>
+            </div>
+            <div class="contenedor-habilidades habilidad1">
+                <header><img src="programacion.svg" alt="programacion"></header>
+                <article>
+                    <p id="titulillo"><strong>Web Desing</strong></p>
+                    <h3>Creation of clear, concise and simple with a responsive design for tablets, movile, etc...</h3>
+                    <p id="texto">In a short amount of time, I have achieved great fluency with HTML, CSS and JavaScript.
+                        I also played with jQuery and Bootstrap, so I know how to use them too.
+                    </p>
+                </article>
+            </div>
+            <div class="contenedor-habilidades habilidad2">
+                <header><img src="perfil.svg" alt="programacion"></header>
+                <article>
+                    <p id="titulillo"><strong>Personal</strong></p>
+                    <h3>Young, with eager to learn about Full Stack Development, web applications or data visualization</h3>
+                    <p id="texto">After studying Bachillerato decided that I could create my own path of learning, like I did with my english, while I make my own projects.
+                        My goal is to become a Data Scientist someday as I am doing with Web Development.
+                    </p>
+                </article>
+            </div>
+            <div class="contenedor-habilidades habilidad3">
+                <header><img src="listo.svg" alt="programacion"></header>
+                <article>
+                    <p id="titulillo">Learning</p>
+                    <h3>Right now I trying to learn the Full MEAN Stack, Python and anything regarding data visualization</h3>
+                    <p id="texto">This are the technologies that I really want to learn: MEAN Stack, React, D3.js, Python(NumPy, Pandas).</p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section class="segundo-fondo">
+        <div class="fondo-segundo-proyectos">
+            <div class="buscador-proyectos"></div>
+            <div class="lista-proyectos">
+                <div class="proyecto proyecto1">
+                    <div class="filtro-proyecto">
+                        <p>Web App where you can track a user or a list of user and see if they are online</p>
+                        <a class="boton-link-proyecto" href="http://codepen.io/GabriRa/full/mWeEgQ/" target="_blank">Visit Project</a>
+                    </div>
+                    <div class="imagen-proyecto">
+                        <img src="Proyectos-Imagen/Twitch-API.jpg" alt="Twicht-Api">
+                    </div>
+                </div>
+                <div class="proyecto proyecto2">
+                    <div class="filtro-proyecto">
+                        <p>A calculator with Javascript</p>
+                        <a class="boton-link-proyecto" href="http://codepen.io/GabriRa/full/jypvGR/" target="_blank">Visit Project</a>
+                    </div>
+                    <div class="imagen-proyecto">
+                        <img src="Proyectos-Imagen/Calculadora-APP.jpg" alt="Calculadora-APP">
+                    </div>
+                </div>
+                <div class="proyecto proyecto3">
+                    <div class="filtro-proyecto">
+                        <p>A Wikipedia Viewer using the API to search for entries</p>
+                        <a class="boton-link-proyecto" href="http://codepen.io/GabriRa/full/NdaBjr/" target="_blank">Visit Project</a>
+                    </div>
+                    <div class="imagen-proyecto">
+                        <img src="Proyectos-Imagen/Wikipedia-API.jpg" alt="Wikipedia-Viewer">
+                    </div>
+                </div>
+                <div class="proyecto proyecto4">
+                    <div class="filtro-proyecto">
+                        <p>Pomodoro Clock using a canvas for making the pass of time</p>
+                        <a class="boton-link-proyecto" href="http://codepen.io/GabriRa/full/egLyda/" target="_blank">Visit Project</a>
+                    </div>
+                    <div class="imagen-proyecto">
+                        <img src="Proyectos-Imagen/Pomodoro-Clock.jpg" alt="Pomodoro-Clock">
+                    </div>
+                </div>
+                <div class="proyecto proyecto5">
+                    <div class="filtro-proyecto">
+                        <p>Una aplicacion web usando la API de Twicht para saber si un canal o una lista de canales se encuentra online</p>
+                        <a class="boton-link-proyecto" href="">Visit Project</a>
+                    </div>
+                    <div class="imagen-proyecto">
+                        <img src="Proyectos-Imagen/Twitch-API.jpg" alt="">
+                    </div>
+                </div><div class="proyecto proyecto6">
+                    <div class="filtro-proyecto">
+                        <p>Una aplicacion web usando la API de Twicht para saber si un canal o una lista de canales se encuentra online</p>
+                        <a class="boton-link-proyecto" href="">Visit Project</a>
+                    </div>
+                    <div class="imagen-proyecto">
+                        <img src="Proyectos-Imagen/Twitch-API.jpg" alt="">
+                    </div>
+                </div>
+                <div class="proyecto proyecto7">
+                    <div class="filtro-proyecto">
+                        <p>Una aplicacion web usando la API de Twicht para saber si un canal o una lista de canales se encuentra online</p>
+                        <a class="boton-link-proyecto" href="">Visit Project</a>
+                    </div>
+                    <div class="imagen-proyecto">
+                        <img src="Proyectos-Imagen/Twitch-API.jpg" alt="">
+                    </div>
+                </div>
+                <div class="proyecto proyecto8">
+                    <div class="filtro-proyecto">
+                        <p>Una aplicacion web usando la API de Twicht para saber si un canal o una lista de canales se encuentra online</p>
+                        <a class="boton-link-proyecto" href="">Visit Project</a>
+                    </div>
+                    <div class="imagen-proyecto">
+                        <img src="Proyectos-Imagen/Twitch-API.jpg" alt="">
+                    </div>
+                </div>
+                <div class="proyecto proyecto9">
+                    <div class="filtro-proyecto">
+                        <p>Una aplicacion web usando la API de Twicht para saber si un canal o una lista de canales se encuentra online</p>
+                        <a class="boton-link-proyecto" href="">Visit Project</a>
+                    </div>
+                    <div class="imagen-proyecto">
+                        <img src="Proyectos-Imagen/Twitch-API.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+    </footer>
+    <script src="porfolio-js.js"></script>
+</body>
+</html>
