Fixing, add nav bar effect

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Responsive Desing Portfolio</title>
+    <title>Responsive design Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Playfair+Display+SC|Open+Sans" rel="stylesheet">
 </head>
@@ -12,7 +12,7 @@
     <nav>
         <div class="barra-navegador">
             <ul class="lista-botones">
-                <li class="nav-boton boton1"><a class="nav-boton-ancla" href="#boton1">Header</a></li>
+                <li class="nav-boton boton1 efectoNav"><a class="nav-boton-ancla" href="#boton1">Header</a></li>
                 <li class="nav-boton boton2"><a class="nav-boton-ancla" href="#boton2">Skills</a></li>
                 <li class="nav-boton boton3"><a class="nav-boton-ancla" href="#boton3">Projects</a></li>
                 <li class="nav-boton boton4"><a class="nav-boton-ancla" href="#boton4">About me</a></li>
@@ -33,8 +33,8 @@
         <div class="fondo-principal-cabecera">
             <div class="capa-filtro">
                 <article>
-                    <h2>Web Development</h2>
-                    <p>Junior Front-End</p>
+                    <h2>Gabriel Rabello Astolfo</h2>
+                    <p>Web design <span id="equis"></span> Front-End <span id="equis"></span> UI <span id="equis"></span> Responsive Design</p>
                 </article>
             </div>
         </div>
@@ -44,15 +44,15 @@
             <div class="contenedor-titulo">
                 <h2>Skills &amp; learning</h2>
                 <hr>
-                <p>Fast learning and adaptation to new enviroments</p>
+                <p>Fast learning and adaptation to new environments</p>
             </div>
             <div class="contenedor-habilidades habilidad1">
                 <header><img src="programacion.svg" alt="programacion"></header>
                 <article>
                     <p id="titulillo"><strong>Web Desing</strong></p>
-                    <h3>Creation of clear, concise and simple with a responsive design for tablets, movile, etc...</h3>
-                    <p id="texto">In a short amount of time, I have achieved great fluency with HTML, CSS and JavaScript.
-                        I also played with jQuery and Bootstrap, so I know how to use them too.
+                    <h3>Clean, clear and responsive creation of web pages.</h3>
+                    <p id="texto">In a short period of time, I have achieved a great fluency with HTML, CSS and JavaScript.
+                        I have also played with jQuery and Bootstrap, so I can work with it too.
                     </p>
                 </article>
             </div>
@@ -60,9 +60,10 @@
                 <header><img src="perfil.svg" alt="programacion"></header>
                 <article>
                     <p id="titulillo"><strong>Personal</strong></p>
-                    <h3>Young, with eager to learn about Full Stack Development, web applications or data visualization</h3>
-                    <p id="texto">After studying Bachillerato decided that I could create my own path of learning, like I did with my english, while I make my own projects.
-                        My goal is to become a Data Scientist someday as I am doing with Web Development.
+                    <h3>Ambition to learn, work and create anything web related.</h3>
+                    <p id="texto">
+                        Despite have recently starting with web design, I have a great passion proved by my fast learning.
+                         Being a self-taught person makes me great on being able to adapt to almost everything.
                     </p>
                 </article>
             </div>
@@ -70,8 +71,11 @@
                 <header><img src="listo.svg" alt="programacion"></header>
                 <article>
                     <p id="titulillo">Learning</p>
-                    <h3>Right now I trying to learn the Full MEAN Stack, Python and anything regarding data visualization</h3>
-                    <p id="texto">This are the technologies that I really want to learn: MEAN Stack, React, D3.js, Python(NumPy, Pandas).</p>
+                    <h3>Full MEAN/MENR Stack is my goal right now, desiring to work with it.</h3>
+                    <p id="texto">
+                        Interested in learning anything related with single-page application, responsive design, UI, data visualization
+                        or anything related with programming and working with webs.
+                    </p>
                 </article>
             </div>
         </div>
@@ -193,7 +197,7 @@
                     <p><label>Email: </label>GabriRabelloT@gmail.com</p>
                 </div>
                 <div class="caja-informacion cj-info-der cj-info-4-der">
-                    <p><label>Interested to Learn: </label>React, Angular, Node, Express, MongoDB and eneything related with data visualization </p>
+                    <p><label>Interested to Learn: </label>SASS, React, Angular, Node, Express, MongoDB and eneything related with data visualization </p>
                 </div>
             </div>
         </div>
