--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Responsive design Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Playfair+Display+SC|Open+Sans" rel="stylesheet">
 </head>
 <body>
@@ -47,7 +47,7 @@
                 <p>Fast learning and adaptation to new environments</p>
             </div>
             <div class="contenedor-habilidades habilidad1">
-                <header><img src="programacion.svg" alt="programacion"></header>
+                <header><img src="svg/programacion.svg" alt="programacion"></header>
                 <article>
                     <p id="titulillo"><strong>Web Desing</strong></p>
                     <h3>Clean, clear and responsive creation of web pages.</h3>
@@ -57,7 +57,7 @@
                 </article>
             </div>
             <div class="contenedor-habilidades habilidad2">
-                <header><img src="perfil.svg" alt="programacion"></header>
+                <header><img src="svg/perfil.svg" alt="programacion"></header>
                 <article>
                     <p id="titulillo"><strong>Personal</strong></p>
                     <h3>Ambition to learn, work and create anything web related.</h3>
@@ -68,7 +68,7 @@
                 </article>
             </div>
             <div class="contenedor-habilidades habilidad3">
-                <header><img src="listo.svg" alt="programacion"></header>
+                <header><img src="svg/listo.svg" alt="programacion"></header>
                 <article>
                     <p id="titulillo">Learning</p>
                     <h3>Full MEAN/MENR Stack is my goal right now, desiring to work with it.</h3>
@@ -205,7 +205,7 @@
     <footer>
 
     </footer>
-    <script src="jquery-3.2.0.min.js"></script>
-    <script src="porfolio-js.js"></script>
+    <script src="scripts/jquery-3.2.0.min.js"></script>
+    <script src="scripts/porfolio-js.js"></script>
 </body>
 </html>
